--- a/pdm_utility_hub/requirements.txt
+++ b/pdm_utility_hub/requirements.txt
@@ -1,4 +1,4 @@
-streamlit
+streamlit>=1.32.0
 pandas
 aiohttp
 Pillow
@@ -9,6 +9,3 @@ lxml
 zeep
 python-multipart
 xlsxwriter
-hashlib
-hmac
-base64
